--- a/biome.json
+++ b/biome.json
@@ -56,5 +56,14 @@
         "parser": {
             "interpolation": true
         }
+    },
+    "css": {
+        "parser": {
+            "cssModules": true,
+            "tailwindDirectives": true
+        },
+        "linter": {
+            "enabled": true
+        }
     }
 }
