--- a/biome.json
+++ b/biome.json
@@ -65,5 +65,17 @@
         "linter": {
             "enabled": true
         }
-    }
+    },
+    "overrides": [
+        {
+            "includes": ["**/*.spec.ts", "**/*.test.ts"],
+            "linter": {
+                "rules": {
+                    "suspicious": {
+                        "noExplicitAny": "off"
+                    }
+                }
+            }
+        }
+    ]
 }
